Math.clamp statt Math.min/Math.max in CardRepositoryAdapter (Issue #141)
Sonar S6885: Math.max(0, Math.min(newPosition, targetActive.size()))
klemmt newPosition auf [0, size()] — genau das leistet Java 21+
Math.clamp(value, min, max) direkt, lesbarer und ohne die verschachtelte
min/max-Kombination.

Closes #141

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>